fixing loading animation on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -30,13 +30,7 @@ p{
 }
 
 .loading{
-  text-align:center;
-  height:100vh; 
-  width:100vw;
-  position:fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding-top: 10px;
 }
 
 /* No-user*/
